--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Portifólio Pessoal</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<div id="all"> <!-- Div geral para controlar todo o corpo do site -->
@@ -16,7 +16,7 @@
 			<div id="content"> <!-- Div principal -->
 				<div id="sobre"> <!-- tag id para linkar com o clique do menu -->
 					<h2>Sobre mim</h2>
-					<p><img class="avatar" src="css/eu.jpg" alt="Foto pessoal" title="Eu"></p>
+					<p><img class="avatar" src="eu.jpg" alt="Foto pessoal" title="Eu"></p>
 					<p>Meu nome é Márcio Henrique Ribeiro Machado, nascido em Santa Rita do Sapucaí, sul de Minas Gerais.</p>
 					<p>Sempre gostei de computadores e jogos, o que me levou a minha área de atuação.</p>
 					<p>Gosto de filmes, séries, esportes, principalmente o Rugby.</p>
@@ -36,7 +36,7 @@
 					<h2>Contato</h2>
 					<p>Clique no ícone abaixo para enviar uma mensagem. ;)</p>
 					
-					<img class="icon" onclick="mostrarFormulario()" src="css/mensagem.png" alt="Abrir formulário" title="Ícone imagem"> <!-- Imagem que aciona o script para mostrar o formulário -->
+					<img class="icon" onclick="mostrarFormulario()" src="mensagem.png" alt="Abrir formulário" title="Ícone imagem"> <!-- Imagem que aciona o script para mostrar o formulário -->
 					
 					<form id="form" style="display: none;"> <!-- formulário para contato, que começa escondido e é mostrado com o clique -->
 						<div class="formulario">
