--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Portifólio Pessoal</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
